# volume-cartographer

./: .dockerignore  CMakeLists.txt  README.md  jammy.Dockerfile  ubuntu-22.04-jammy.Dockerfile  ubuntu-24.04-noble.Dockerfile  ubuntu-24.10-oracular.Dockerfile
apps/: CMakeLists.txt
apps/Canny/: CMakeLists.txt
apps/VC/: CMakeLists.txt  CSliceCollection.cpp  CSliceCollection.hpp  CVolumeViewer.cpp  CVolumeViewer.hpp  CVolumeViewerView.cpp  CVolumeViewerView.hpp  CWindow.cpp  CWindow.hpp  SegmentationStruct.hpp  VCAppMain.cpp  VCMain.ui
apps/VC3D/: CMakeLists.txt  CSliceCollection.cpp  CSurfaceCollection.cpp  CSurfaceCollection.hpp  CVolumeViewer.cpp  CVolumeViewer.hpp  CVolumeViewerView.cpp  CVolumeViewerView.hpp  CWindow.cpp  CWindow.hpp  OpChain.cpp  OpChain.hpp  SegmentationStruct.hpp  UndoCommands.cpp  UndoCommands.hpp  VCAppMain.cpp  VCMain.ui  formsetsrc.cpp  formsetsrc.hpp  formsetsrc.ui  opslist.cpp  opslist.hpp  opslist.ui  opssettings.cpp  opssettings.hpp  opssettings.ui
apps/src/: ImgToZarr.cpp  ObjAlphaCompRefinement.cpp  TestChunkedCompute.cpp  ZarrAlphaComp.cpp  ZarrExtract.cpp  ZarrFlatteningExps.cpp  ZarrRender.cpp  ZarrRenderBlur.cpp  ZarrRenderSurface.cpp  vc_fill_quadmesh.cpp  vc_grow_seg_from_seed.cpp  vc_grow_seg_from_segments.cpp  vc_render_tifxyz.cpp  vc_render_video.cpp  vc_tifxyz2obj.cpp  vc_tifxyz_winding.cpp
cmake/: BuildJSON.cmake  BuildZ5.cmake  Buildsmgl.cmake  VCFindDependencies.cmake
core/: CMakeLists.txt
core/include/vc/core/io/: PointSetIO.hpp
core/include/vc/core/types/: ChunkedTensor.hpp  DiskBasedObjectBaseClass.hpp  LRUCache.hpp  LRUCache2.hpp  PointSet.hpp  Volume.hpp  VolumePkg.hpp
core/include/vc/core/util/: CostFunctions.hpp  Slicing.hpp  Surface.hpp  SurfaceModeling.hpp
core/src/: ChunkedTensor.cpp  CostFunctions.hpp  DiskBasedObjectBaseClass.cpp  Segmentation.cpp  Slicing.cpp  Surface.cpp  SurfaceHelpers.cpp  SurfaceHelpers.hpp  TIFFIO.cpp  Volume.cpp  VolumePkg.cpp  cubic_interpolation_acc.h
docs/reference_settings/: params_infill_fast_5x.json  params_infill_hq.json  params_infill_med.json
scripts/: Dockerfile.build-appimage  VC.desktop  start.sh
segmentation/: CMakeLists.txt
